# passta

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: button.rs  codes.rs  keyboard.rs  keycodes.rs  main.rs
